--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "homepage": "https://xmtp.github.io/xmtp-react-playground",
   "dependencies": {
+    "@airstack/airstack-react": "^0.6.4",
     "@animxyz/core": "^0.6.6",
     "@animxyz/react": "^0.6.7",
     "@heroicons/react": "^2.0.18",
+    "@neynar/nodejs-sdk": "^1.37.2",
+    "@neynar/react": "^0.6.0",
     "@rainbow-me/rainbowkit": "^0.10.0",
     "@xmtp/content-type-reaction": "^1.0.1",
     "@xmtp/content-type-read-receipt": "^1.0.0",
@@ -22,10 +25,12 @@
     "@xmtp/content-type-reply": "^1.0.0",
     "@xmtp/xmtp-js": "^10.2.0",
     "async-mutex": "^0.4.0",
+    "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.6",
+    "dotenv": "^16.4.5",
     "emojilib": "^3.0.10",
     "ethers": "^5.5.3",
     "javascript-time-ago": "^2.5.9",
@@ -33,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-time-ago": "^7.2.1",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
     "wagmi": "^0.10.0",
     "web3.storage": "^4.5.4"
   },
