--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@animxyz/core": "^0.6.6",
     "@animxyz/react": "^0.6.7",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/modal": "^2.0.37",
+    "@nextui-org/react": "^2.4.3",
+    "@nextui-org/system": "^2.2.3",
+    "@nextui-org/theme": "^2.2.7",
     "@rainbow-me/rainbowkit": "^0.10.0",
     "@xmtp/content-type-reaction": "^1.0.1",
     "@xmtp/content-type-read-receipt": "^1.0.0",
@@ -28,7 +32,9 @@
     "dexie-react-hooks": "^1.1.6",
     "emojilib": "^3.0.10",
     "ethers": "^5.5.3",
+    "framer-motion": "^11.3.7",
     "javascript-time-ago": "^2.5.9",
+    "lucide-react": "^0.408.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
