--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.18",
     "@nextui-org/modal": "^2.0.37",
     "@nextui-org/react": "^2.4.3",
+    "@nextui-org/spinner": "^2.0.31",
     "@nextui-org/system": "^2.2.3",
     "@nextui-org/theme": "^2.2.7",
     "@rainbow-me/rainbowkit": "^0.10.0",
